--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,14 +10,37 @@ body {
 
 header {
     display: flex;
-    flex-direction: row-reverse;
+    justify-content: flex-end;
     background-color: darkgray;
     padding: 10px 10px;
 }
 
-.cart-button {
+input:active,
+ :hover,
+ :focus {
+    outline: 0;
+    outline-offset: 0;
+}
+
+.cart-button,
+.search-button {
     border-radius: 15px;
     padding: 5px 10px;
+}
+
+.search-button {
+    margin-right: 5px;
+}
+
+.goods-search {
+    margin: 0 5px 0 0;
+    border-radius: 15px;
+    padding-left: 10px;
+}
+
+.goods-search :active,
+:focus {
+    border-color: cornsilk;
 }
 
 main {
